fix: fix z-index for slider

--- a/src/pages/posts/ui/post/Post.module.scss
+++ b/src/pages/posts/ui/post/Post.module.scss
@@ -51,7 +51,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  z-index: 2;
+  z-index: 3;
   min-height: 160px;
 }
 
@@ -87,7 +87,7 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 16px;
-  margin-bottom: 8px ;
+  margin-bottom: 8px;
 }
 
 .description {
