--- a/src/pages/posts/ui/slider/SliderPost.module.scss
+++ b/src/pages/posts/ui/slider/SliderPost.module.scss
@@ -38,7 +38,7 @@
   padding: 4px 8px;
   background: var(--dark-300);
   border-radius: 0;
-  z-index: 10;
+  z-index: 2;
 }
 
 .dot {
@@ -62,14 +62,14 @@
   padding: 4px 8px;
   border-radius: 4px;
   font-size: 12px;
-  z-index: 10;
+  z-index: 2;
 }
 
 .sliderButton {
   position: absolute;
-  top: 30%;
+  top: 35%;
   transform: translateY(-50%);
-  z-index: 10;
+  z-index: 2;
   background: rgba(0, 0, 0, 0.5);
   border: none;
   border-radius: 0;
@@ -108,7 +108,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  z-index: 10;
+  z-index: 2;
 
   li {
     width: 6px;
